Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI708NET.CS

            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_RcvBuild", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_RcvBuild(UInt32 configval, Int32 logfreq, Int32 framecount, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_XmtBuild", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_XmtBuild(UInt32 configval, UInt16 framefreq, Int32 logfreq, Int32 framecount, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ChConfigEx", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ChConfigEx(UInt32 configval, UInt16 count, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ChDataCountRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_ChDataCountRd(Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ChDataCountWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_ChDataCountWr(UInt16 countval, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_DllUsageCount", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_DllUsageCount();
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_GetChanCount", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI708_GetChanCount(ref Int32 rcvcount, ref Int32 xmtcount, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_HostComm", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_HostComm(IntPtr lpparam, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_IsChan", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_IsChan(Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_IsRcvChan", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_IsRcvChan(Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_IsXmtChan", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_IsXmtChan(Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgActivityRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_MsgActivityRd(Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgActivityWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI708_MsgActivityWr(UInt16 value, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgAddr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI708_MsgAddr(Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgCommRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgCommRd(ref MSGFIELDS708 msgfields, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgCommWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgCommWr(ref MSGFIELDS708 msgfields, Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgConfig", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgConfig(UInt32 configval, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgCreate", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI708_MsgCreate(UInt32 configval, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgOptRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI708_MsgOptRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgOptWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI708_MsgOptWr(UInt16 msgopt, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgReset", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI708_MsgReset(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgTableCreate", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI708_MsgTableCreate(Int32 count, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgTableRd", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI708_MsgTableRd(Int32 msgindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgTableReset", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI708_MsgTableReset(Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgTableWipe", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI708_MsgTableWipe(UInt32 basevaladdr, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_MsgTableWr", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_MsgTableWr(UInt32 msgaddr, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_ParamAmplitudeGet", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_ParamAmplitudeGet(ref UInt16 dacval, Int32 channum, IntPtr handleval);
            [DllImport("BTI70864.DLL", EntryPoint = "BTI708_TestProtocol", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI708_TestProtocol(IntPtr handleval);
        }
